# workflow-test

./: bash.sh  open_in_vscode.sh  runner.yml  script.py  script.sh
components/risk-engine/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose-grafana.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  risk-engine.postman_collection.json  test.py
components/risk-engine/config/: __init__.py  loki-config.yml  prometheus-config.yml  promtail-config.yml  settings.py  settings.toml  tempo-config.yml
components/risk-engine/notebooks/: 00_fetch_data.ipynb  01_features_store.ipynb  03_pd_model.ipynb  04_rule_based_model.ipynb  05_calculations_center.ipynb  06_analytics_center.ipynb  07_monitoring_center.ipynb  inference.ipynb  utils.py
components/risk-engine/notebooks/objects/: income_model_v0.6.pkl  pd_model_v0.5.pkl
components/risk-engine/pydocs/source/: conf.py  index.rst
components/risk-engine/resources/: data.sql  schema.sql
components/risk-engine/resources/data/: 20240527_ssn_governorate_mapping.xlsx  20240828_mylo_addresses.xlsx  20240914_response.csv  20240914_test_data_for_risk_api.json  20240916_response.csv  job_salary_mapping.json
components/risk-engine/resources/models/: IncomeModel-v1.pkl  IncomeModel-v2.pkl  IncomeModel-v4.pkl  IncomeModel-v5.pkl  IncomeModel-v7.pkl  PDModel-v1.pkl  PDModel-v2.pkl  PDModel-v4.pkl
components/risk-engine/src/: __init__.py
components/risk-engine/src/api/: routes.py
components/risk-engine/src/config/: logging.py  (+3 more)
components/risk-engine/tests/: conftest.py
(+2312 files in other folders)
